# devlog

./: .gitignore  LICENSE.md  README.md  env.example  pyproject.toml  requirements.txt  timeframes_config.json.example
src/devlog/: __init__.py
src/devlog/libs/: ghostwriter.py  gitoperations.py  ollamator.py
